--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,52 @@
-body{
-  background: red;
+* {
+  box-sizing: border-box;
 }
-h3{
-  margin-top: 40px;
+
+html {
+  font-size: 62.5%;
+}
+
+body{
+  background: pink;
+  color: gray;
+  font-family: "Chewy", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+header,
+section {
+  height: 100px;
+}
+
+h1 {
+  font-size: 4rem;
+}
+
+h2,
+h3 {
+  font-size: 2.4rem;
+}
+
+span {
+  font-size: 1.6rem;
+}
+
+header,
+main,
+section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+}
+
+/* HOVER EFFECTS */
+
+.fa-thumbs-up:hover,
+.fa-thumbs-down:hover,
+.fa-trash:hover {
+  cursor: pointer;
+  color: darkgray;
 }
