--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,37 +2,50 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>21 Savage Fans</title>
-  <link rel="shortcut icon" href="favicon.ico">
+  <title>Video Game Names</title>
+
+  <!--BROWSER ICON-->
+  <link rel="shortcut icon" href="browserIcon.png">
+
+  <!--FONTS-->
   <link rel="stylesheet" href="font-awesome.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Chewy&display=swap" rel="stylesheet">
+
+  <!--STYLESHEETS-->
+  <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>21 Savage</h1>
-  <h2>Why you trappin so hard?</h2>
+  <header>
+    <h1>Video Games</h1>
+  </header>
 
+  <section>
+    <h2>Submit a Game</h2>
+    <form action="/videoGames" method="POST">
+      <input type="text" placeholder="Video Game Name" name="videoGameName">
+      <input type="text" placeholder="Game System" name="gameSystem">
+      <button type="submit">Submit</button>
+    </form>
+  </section>
 
-  <h3>Messages</h3>
-  <ul class="messages">
-  <% for(var i=0; i<messages.length; i++) {%>
-    <li class="message">
-      <span><%= messages[i].name %></span>
-      <span><%= messages[i].msg %></span>
-      <span><%= messages[i].thumbUp %></span>
-      <span><i class="fa fa-thumbs-up" aria-hidden="true"></i></span>
-      <span><i class="fa fa-thumbs-down" aria-hidden="true"></i></span>
-      <span><i class="fa fa-trash" aria-hidden="true"></i></span>
-    </li>
-  <% } %>
-  </ul>
-
-  <h2>Add a message</h2>
-
-  <form action="/messages" method="POST">
-    <input type="text" placeholder="name" name="name">
-    <input type="text" placeholder="message" name="msg">
-    <button type="submit">Submit</button>
-  </form>
+  <main>
+    <h3>Submitted Games</h3>
+    <ul>
+    <% for(var i=0; i<submittedGames.length; i++) {%>
+      <li>
+        <span><%= submittedGames[i].videoGameName %></span>
+        <span><%= submittedGames[i].gameSystem %></span>
+        <span><%= submittedGames[i].upVote %></span>
+        <span><i class="fa fa-thumbs-up" aria-hidden="true"></i></span>
+        <span><i class="fa fa-thumbs-down" aria-hidden="true"></i></span>
+        <span><i class="fa fa-trash" aria-hidden="true"></i></span>
+      </li>
+    <% } %>
+    </ul>
+  </main>
 
   <script src="main.js"></script>
 
