--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,20 +32,38 @@
   </section>
 
   <main>
-    <h3>Submitted Games</h3>
-    <ul>
-    <% for(var i=0; i<submittedGames.length; i++) {%>
-      <li>
-        <span><%= submittedGames[i].videoGameName %></span>
-        <span><%= submittedGames[i].gameSystem %></span>
-        <span><%= submittedGames[i].upVote %></span>
-        <span><i class="fa fa-thumbs-up" aria-hidden="true"></i></span>
-        <span><i class="fa fa-thumbs-down" aria-hidden="true"></i></span>
-        <span><i class="fa fa-trash" aria-hidden="true"></i></span>
-      </li>
-    <% } %>
-    </ul>
+    <div>
+      <h3>Games to Play</h3>
+      <ul>
+      <% for(var i=0; i<submittedGames.length; i++) {%>
+        <% if (!submittedGames[i].completed) { %>
+          <li>
+            <span><%= submittedGames[i].videoGameName %></span>
+            <span><%= submittedGames[i].gameSystem %></span>
+            <span><i class="fa fa-star-o" aria-hidden="true"></i></span>
+            <span><i class="fa fa-trash" aria-hidden="true"></i></span>
+          </li>
+        <% } %>
+      <% } %>
+      </ul>
+    </div>
+    <div>
+      <h3>Completed Games</h3>
+      <ul>
+        <% for(var i=0; i<submittedGames.length; i++) {%>
+          <% if (submittedGames[i].completed) { %>
+            <li>
+              <span><%= submittedGames[i].videoGameName %></span>
+              <span><%= submittedGames[i].gameSystem %></span>
+              <span><i class="fa fa-star" aria-hidden="true"></i></span>
+              <span><i class="fa fa-trash" aria-hidden="true"></i></span>
+            </li>
+          <% } %>
+        <% } %>
+      </ul>
+    </div>
   </main>
+  
 
   <script src="main.js"></script>
 
